# HeapSnapAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/heapsnapandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/heapsnap/: heapsnap.cpp  inject.c  leak_test.c
app/src/main/cpp/heapsnap/include/: heapsnap.h
app/src/main/java/com/example/heapsnapandroid/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/heapsnapandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
